Deploy/modules/vpc/igw.tf
resource "aws_internet_gateway" "internet_gateway" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "cdv-project-pokemon-internet-gateway"
  }
}
